--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,11 @@
 	font-weight: normal;
 	font-style: normal;
 }
+html {
+	font-family: 'Univers-Light', sans-serif;
+	font-size: 16px;
+	color: #777;
+}
+ul {
+	list-style: none;
+}
