--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,12 @@ ul {
 	
 }
 .header-bottom__list {
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 0;
+	padding-right: 0;
 }
 .header-bottom__item {
 	display: inline-block;
-	max-width: 200px;
+	max-width: 204px;
 	text-align: center;
 	padding-right: 15px;
 	padding-left: 15px;
@@ -120,63 +120,51 @@ ul {
 	background-image: url('../images/menu_all.png');
 	display: block;
 	margin: 0 auto;
+	width: 34px;
+    height: 30px;
 	background-repeat: no-repeat;
 }
 .header-bottom__img--heating {
-	width: 31px;
-    height: 25px;
-    background-position: -4px -90px;
+    background-position: -118px -4px;
 }
 .header-bottom__item a:hover .header-bottom__img--heating {
-	background-position: -46px -90px;
+	background-position: -118px -42px;
 }
 .header-bottom__img--service {
-	width: 34px;
-    height: 25px;
-    background-position: -4px -183px;
+    background-position: -232px -4px;
 }
 .header-bottom__item a:hover .header-bottom__img--service {
-	background-position: -46px -183px;
+	background-position: -232px -42px;
 }
 .header-bottom__img--pool {
-	width: 25px;
-    height: 29px;
-    background-position: -4px -150px;
+    background-position: -194px -4px;
 }
 .header-bottom__item a:hover .header-bottom__img--pool {
-	background-position: -46px -150px;
+	background-position: -194px -42px;
 }
 .header-bottom__img--canalization {
-	width: 30px;
-    height: 25px;
-    background-position: -4px -37px;
+    background-position: -42px -4px;
 }
 .header-bottom__item a:hover .header-bottom__img--canalization {
-	background-position: -46px -37px;
+	background-position: -42px -42px;
 }
 .header-bottom__img--analiz {
-	width: 28px;
-    height: 29px;
     background-position: -4px -4px;
 }
 .header-bottom__item a:hover .header-bottom__img--analiz {
-	background-position: -46px -4px;
+	background-position: -4px -42px;
 }
 .header-bottom__img--clean_water {
-	width: 20px;
-    height: 20px;
-    background-position: -4px -66px;
+    background-position: -80px -4px;
 }
 .header-bottom__item a:hover .header-bottom__img--clean_water {
-	background-position: -46px -66px;
+	background-position: -80px -42px;
 }
 .header-bottom__img--own_making {
-	width: 27px;
-    height: 27px;
-    background-position: -4px -119px;
+    background-position: -156px -4px;
 }
 .header-bottom__item a:hover .header-bottom__img--own_making {
-	background-position: -46px -119px;
+	background-position: -156px -42px;
 }
 
 .submenu {
@@ -186,6 +174,7 @@ ul {
 	font-size: 16px;
  	font-family: 'ProximaNova-Light';
  	color: #777;
+ 	margin-top: 10px;
 }
 .submenu__link--active {
 	color: #96d794;
