--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ ul {
 	padding-right: 15px;
 	padding-left: 15px;
 	vertical-align: top;
+	position: relative;
 }
 .header-bottom__item a {
 	display: block;
@@ -168,7 +169,9 @@ ul {
 }
 
 .submenu {
+	position: absolute;
 	display: none;
+	z-index: 99;
 }
 .header-bottom__name {
 	font-size: 16px;
@@ -179,7 +182,7 @@ ul {
 .submenu__link--active {
 	color: #96d794;
 }
-.header-bottom__item a:hover .submenu {
+.header-bottom__item:hover .submenu {
 	display: block;
 }
 
