--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 	font-weight: normal;
 	font-style: normal;
 }
-html {
+body {
 	font-family: 'Univers-Light', sans-serif;
 	font-size: 16px;
 	color: #777;
@@ -302,3 +302,44 @@ ul {
 .advantage__item--price {
 	background-image: url(../images/price.png);
 }
+
+.works {
+	padding: 40px 0 10px;
+	text-align: center;
+}
+
+.works__items {
+	position: relative;
+}
+
+.works__text {
+	font-size: 18px;
+	margin-bottom: 25px;
+	margin-top: 0;
+}
+
+.work {
+	margin-bottom: 30px;
+}
+
+.offers {
+	position: absolute;
+	padding: 50px 50px 50px 30px;
+	background-color: #393939;
+	top: 0;
+	bottom: 0;
+	right: 0;
+}
+
+.offers__title {
+	font-size: 23px;
+	color: #fff;
+	line-height: 1.2;
+	margin-bottom: 40px;
+}
+
+.offers__text {
+	line-height: 1.5;
+	margin-bottom: 45px;
+}
+
